# c-logger

./: .gitignore  .travis.yml  CMakeLists.txt  CUSTOMIZATIONS.md  README.md  build.bat  build.sh  header-only.sh  logger.h
benchmark/: Makefile  build_glog.sh  build_logger.sh  glog-install.sh  glog_benchmark.cpp  glog_bm.cpp  glog_bm_th.cpp  logger_benchmark.cpp  logger_bm.cpp  logger_bm_th.cpp
doc/: Doxyfile
example/: CMakeLists.txt  Makefile  conf.c  consolelogger.c  filelogger.c  logger.conf  logger_data_example.c  logger_file_example.c  logger_multi_example.c  loggerconf_example.c
src/: logger.c  logger.h  loggerconf.c  loggerconf.h
test/: CMakeLists.txt  logger_console_test.c  logger_file_test.c  logger_loglevel_test.c  logger_multi_test.c  loggerconf_test.c  nanounit.h
test/res/: console.conf  file.conf
